# pyappify

./: .gitignore  README.md  index.html  package.json
.github/workflows/: receive-medispider-build.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
